for new Ticketing brach, dulpicating from Ticketing V2 to tmelvin repositero

--- a/src/pages/Ticketing/packageDetails.html
+++ b/src/pages/Ticketing/packageDetails.html
@@ -18,28 +18,24 @@
         <span class="organization">
         </span>
       </div>
-      <div class="cell small-12 medium-6 "><b>Package Type</b>
-        <span class="packageType">
-        </span>
-      </div>
     </div>
     <div class="grid-x grid-margin-x">
       <div class="cell small-12 medium-6 "><b>Product</b>
         <span class="product">
         </span>
       </div>
-      <div class="cell small-12 medium-6 "><b>System</b>
-        <span class="system">
-        </span>
-      </div>
-    </div>
-    <div class="grid-x grid-margin-x">
       <div class="cell small-12 medium-6 "><b>Status</b>
         <span class="status">
         </span>
       </div>
-      <div class="cell small-12 medium-6 "><b>Man-Day(s)</b>
-        <span class="manDays">
+    </div>
+    <div class="grid-x grid-margin-x">
+      <div class="cell small-12 medium-6 "><b>Package</b>
+        <span class="packageType">
+        </span>
+      </div>
+      <div class="cell small-12 medium-6 "><b>Assurance Plus</b>
+        <span class="assurancePlusLbl">
         </span>
       </div>
     </div>
@@ -65,25 +61,21 @@
     </div>
   </div>
 </section>
+
 <section id="packageDetailsContainer">
-  <div class="boxContent">
-    <button type="button" class="buttonType2 buttonType2Add left show-for-small-only"  data-open="packageTransactionAddForm" >New Transaction</button>
-  </div>
   <header class="grid-x">
     <h2 class="cell auto">Package Transaction</h2>
-    <button type="button" class="buttonType2 buttonType2Add cell medium-3 text-right show-for-medium"  data-open="packageTransactionAddForm" >New Transaction</button>
+    <button type="button" style="display:none" class="buttonType2 buttonChargeAdd cell medium-2 text-right adminControl" data-open="packageExtendForm">Extend Expiry</button>
+    <button type="button" style="display:none" class="buttonType2 buttonType2Add cell medium-3 text-right show-for-medium adminControl" data-open="packageTransactionAddForm" >New Transaction</button>
   </header>
-
   <div class="scrollContainer scrollYPackages">
     <table class="packagetranTable">
       <thead>
         <tr>
-          <th>Transaction Type</th>
-          <th>Man-day(s)</th>
-          <th>Remarks</th>
-          <th>FLID</th>
           <th>Transaction Date</th>
-          <th>Added by</th>
+          <th>By</th>
+          <th>Hour(s)</th>
+          <th>Remarks</th>
         </tr>
       </thead>
       <tbody>
@@ -91,43 +83,80 @@
     </table>
   </div><!-- scroll container end -->
 </section><!-- packagaeContainer end -->
-
+<form id="packageExtendForm" class="reveal medium" data-reveal >
+  <header onloadedmetadata=""class="grid-x grid-padding-x">
+    <h3 class="cell">Extend Expiry</h3>
+    <button class="close-button" data-close aria-label="Close modal" type="button">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </header>
+  <div class="grid-x grid-padding-x">
+    <div class="cell">
+      <label>
+        New Expiry Date<span style="color:red">*</span>
+        <input type="date" id="expiryDate" name="expiryDate"/>
+      </label>
+    </div>
+  </div>
+  <div class="grid-x grid-padding-x">
+    <div class="cell">
+      <label>
+        Remarks<span style="color:red">*</span>
+        <textarea id="remarks" name="remarks"></textarea>
+      </label>
+    </div>
+  </div>
+  <footer class="grid-x grid-margin-x">
+      <button type="button" id="submit" data-close class="cell small-12 auto packagaExtendSubmitBtn">Submit</button>
+  </footer>
+</form>
 <form id="packageTransactionAddForm" class="reveal medium" data-reveal >
-<header onloadedmetadata=""class="grid-x grid-padding-x">
-<h3 class="cell">New Transaction</h3>
-<button class="close-button" data-close aria-label="Close modal" type="button">
-  <span aria-hidden="true">&times;</span>
-</button>
-</header>
-<div class="grid-x grid-padding-x">
-  <div class="cell">
-    <label>
-      Transaction Type
-      <select id="type" name="type">
-        <option value="">-- Please Select --</option>
-        <option value="Debit">Debit</option>
-        <option value="Credit">Credit</option>
-      </select>
-    </label>
+  <header onloadedmetadata=""class="grid-x grid-padding-x">
+    <h3 class="cell">New Transaction</h3>
+    <button class="close-button" data-close aria-label="Close modal" type="button">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </header>
+  <div class="grid-x grid-padding-x">
+    <div class="cell small-12 medium-6">
+      <label>
+        Transaction Type<span style="color:red">*</span>
+        <select id="tranType" name="tranType">
+          <option value="">-- Please Select --</option>
+          <option value="Debit">Debit</option>
+          <option value="Credit">Credit</option>
+        </select>
+      </label>
+    </div>
+    <div class="cell small-12 medium-6">
+      <div style="display: none" class="grid-x grid-padding-x assurancePlusDiv">
+        <div class="cell">
+          <label>
+            Assurance Plus <span style="color:red">*</span>
+            <input type="text" id="assurancePlusNo" name="assurancePlusNo"/>
+          </label>
+        </div>
+      </div>
+      <div  style="display: none" class="grid-x grid-padding-x hoursDiv">
+        <div class="cell">
+          <label>
+            Hour(s) <span style="color:red">*</span>
+            <input type="text" id="hours" name="hours"/>
+          </label>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
-<div class="grid-x grid-padding-x">
-  <div class="cell">
-    <label>
-      Man-Day(s)
-      <input type="text" id="manDays" name="manDays"/>
-    </label>
+
+  <div class="grid-x grid-padding-x">
+    <div class="cell">
+      <label>
+        Remarks<span style="color:red">*</span>
+        <textarea id="remarks" name="remarks"></textarea>
+      </label>
+    </div>
   </div>
-</div>
-<div class="grid-x grid-padding-x">
-  <div class="cell">
-    <label>
-      Remarks
-      <textarea id="remarks" name="remarks"></textarea>
-    </label>
-  </div>
-</div>
-<footer class="grid-x grid-margin-x">
-    <button type="button" id="submit" data-close class="cell small-12 medium-offset-4 auto packagaTransactionSubmitBtn">Submit</button>
-</footer>
+  <footer class="grid-x grid-margin-x">
+      <button type="button" id="submit" data-close class="cell small-12 auto packagaTransactionSubmitBtn">Submit</button>
+  </footer>
 </form><!-- package add form end -->
