--- a/src/pages/Ticketing/packages.html
+++ b/src/pages/Ticketing/packages.html
@@ -1,10 +1,7 @@
 <section id="packageContainer">
-  <div class="boxContent">
-    <button type="button" class="buttonType2 buttonType2Add left show-for-small-only"  data-open="packageAddForm">New Product</button>
-  </div>
   <header class="grid-x">
     <h2 class="cell auto">Product(s)</h2>
-    <button type="button" class="buttonType2 buttonType2Add cell medium-3 text-right show-for-medium"  data-open="packageAddForm">New Product</button>
+    <button type="button" style="display:none" class="buttonType2 buttonType2Add cell medium-3 text-right show-for-medium adminControl"  data-open="packageAddForm">New Product</button>
   </header>
 
   <div id='packageFilter' class="packageFilter tabBoxContainer">
@@ -14,19 +11,15 @@
         <span aria-hidden="true">&times;</span>
       </button>
         <div class="grid-x grid-padding-x">
-          <div class="cell">
+          <div class="cell small-12 medium-6">
             <label>Organization
               <select id="organisation" name="organisation">
-                 <option value="">-- Please Select --</option>
               </select>
             </label>
           </div>
-        </div>
-        <div class="grid-x grid-padding-x">
-          <div class="cell">
+          <div class="cell small-12 medium-6">
             <label>Product
             <select id="product" name="product">
-              <option value="">-- Please Select --</option>
             </select>
             </label>
           </div>
@@ -34,29 +27,16 @@
         <div class="grid-x grid-padding-x">
           <fieldset class="cell">
             <legend>Status</legend>
-            <input type="checkbox" id="status"/><label for="status">Active only</label>
+            <select id="status" name="status">
+              <option value="">-- Please Select --</option>
+              <option value="Active" selected>Active</option>
+              <option value="Not-Active">Not-Active</option>
+              <option value="Expired">Expired</option>
+            </select>
           </fieldset>
         </div>
-        <!-- <div class="grid-x grid-padding-x">
-          <fieldset class="cell">
-            <legend>Package Active Date Range</legend>
-            <div class="grid-x grid-margin-x">
-              <div class="cell medium-5">
-                <label>
-                  <input type="text" id="packageStartDate" name="packageStartDate" placeholder="Package Start Date" class="datepicker"/>
-                </label>
-              </div>
-              <span class="cell auto text-center show-for-medium">-</span>
-              <div class="cell medium-5">
-                <label>
-                <input type="text" id="packageExpiryDate" name="packageExpiryDate" placeholder="Package Expiry Date" class="datepicker"/>
-                </label>
-              </div>
-            </div>
-          </fieldset>
-        </div> -->
         <footer class="grid-x grid-margin-x">
-          <button type="button" class="cell small-12 medium-offset-4 medium-4 button tabBoxButtonSubmit">Filter</button>
+          <button type="button" class="cell small-12 medium-offset-4 medium-4 button tabBoxButtonSubmit packageFilterSubmit">Filter</button>
         </footer>
     </form> <!-- form end -->
   </div><!-- filter end -->
@@ -66,9 +46,9 @@
         <thead>
           <tr>
             <th>Organization</th>
-            <th>Man Days</th>
+            <th>Package Type</th>
             <th>Product</th>
-            <th>System</th>
+            <th>Assurance Plus</th>
             <th>Start Date</th>
             <th>Expiry Date</th>
             <th>Status</th>
@@ -92,9 +72,8 @@
 <div class="grid-x grid-padding-x">
   <div class="cell">
     <label>
-      Organisation
+      Organisation <span style="color:red">*</span>
       <select id="organisation" name="organisation">
-         <option value="">-- Please Select --</option>
       </select>
     </label>
   </div>
@@ -102,54 +81,53 @@
 <div class="grid-x grid-padding-x">
   <div class="cell">
     <label>
-      Package Type
+      Product <span style="color:red">*</span>
+      <input type="text" id="product" name="product"/>
+    </label>
+  </div>
+</div>
+<div class="grid-x grid-padding-x">
+  <div class="cell">
+    <label>
+      Package Type <span style="color:red">*</span>
       <select id="type" name="type">
         <option value="">-- Please Select --</option>
+        <option value="Maintenance">Maintenance</option>
+        <option value="Assurance">Assurance</option>
       </select>
     </label>
   </div>
 </div>
 <div class="grid-x grid-padding-x">
-  <div class="cell">
+  <div class="cell small-12 medium-6">
     <label>
-      Product
-      <select id="product" name="product">
-        <option value="">-- Please Select --</option>
-      </select>
+      Start Date <span style="color:red">*</span>
+      <input type="date" id="packageStartDate" name="packageStartDate" placeholder="Package Start Date" />
     </label>
+  </div>
+  <div class="cell small-12 medium-6">
+    <label>
+      Expiry Date <span style="color:red">*</span>
+    <input type="date" id="packageExpiryDate" name="packageExpiryDate" placeholder="Package Expiry Date" />
+    </label>
+  </div>
+</div>
+<div class="grid-x grid-padding-x">
+  <div class="cell small-12 medium-4">
+    <label>
+      Assurance Plus
+      <input type="checkbox" id="assurancePlus" name="assurancePlus"/>
+    </label>
+  </div>
+  <div class="cell small-12 medium-2">
+      <input type="text" style="display: none" id="assurancePlusNo" name="assurancePlusNo"/>
   </div>
 </div>
 <div class="grid-x grid-padding-x">
   <div class="cell">
     <label>
-      System
-      <select id="system" name="system">
-        <option value="">-- Please Select --</option>
-      </select>
-    </label>
-  </div>
-</div>
-<div class="grid-x grid-padding-x">
-  <div class="cell">
-    <label>
-      Man-Day(s)
-      <input type="text" id="manDays" name="manDays"/>
-    </label>
-  </div>
-</div>
-<div class="grid-x grid-padding-x">
-  <div class="cell">
-    <label>
-      Start Date
-      <input type="text" id="packageStartDate" name="packageStartDate" placeholder="Package Start Date" class="datepicker"/>
-    </label>
-  </div>
-</div>
-<div class="grid-x grid-padding-x">
-  <div class="cell">
-    <label>
-      Expiry Date
-    <input type="text" id="packageExpiryDate" name="packageExpiryDate" placeholder="Package Expiry Date" class="datepicker"/>
+      Remarks
+      <textarea id="remarks" name="remarks"></textarea>
     </label>
   </div>
 </div>
