added some page data in reference page

--- a/src/pages/reference.html
+++ b/src/pages/reference.html
@@ -1,8 +1,6 @@
-<h1>Reference Documentation</h1>
+<h1 id="pageTitle">Reference</h1>
 
-<div class="profile"></div>
-
-<div id="contentWindow">
+<div data-page-title="Reference" data-page-layout="columns-3"></div>
   <section id="type">
     <h2>Title and paragraph</h2>
 
@@ -419,4 +417,3 @@
     </div>
 
   </section>
-</div> <!-- contentWindow -->
