--- a/src/pages/mdas/means-testdeclarationform.html
+++ b/src/pages/mdas/means-testdeclarationform.html
@@ -84,8 +84,8 @@
       <select id="sectionA_Occupation" name="sectionA_Occupation" class="selOccupation"></select>
     </div>
     <div>
-      <label for="sectionA_Email">Email Address</label>
-      <input type="text" id="sectionA_Email" name="sectionA_Email" pattern="Email"/>
+      <label for="sectionA_email">Email Address</label>
+      <input type="text" id="sectionA_email" name="sectionA_email" pattern="email"/>
     </div>
   </fieldset>
   <fieldset id="sectionB">
@@ -149,7 +149,7 @@
     </div>
     <div>
       <label for="sectionB_email">Email</label>
-      <input type="email" id="sectionB_email" name="sectionB_email" pattern="Email" />
+      <input type="email" id="sectionB_email" name="sectionB_email" pattern="email" />
     </div>
     <div>
       <label for="sectionB_Occupation">Occupation</label>
@@ -187,11 +187,11 @@
     </div>
     <div>
       <label for="sectionC_NettMain">Monthly Income (Nett)</label>
-      <input type="text" id="sectionC_NettMain" placeholder="S$" name="sectionC_NettMain" pattern="Number"/>
+      <input type="text" id="sectionC_NettMain" placeholder="S$" name="sectionC_NettMain" pattern="number"/>
     </div>
     <div>
       <label for="sectionC_GrossMain">Monthly Income (Gross)</label>
-      <input type="text" id="sectionC_GrossMain" placeholder="S$" name="sectionC_GrossMain" pattern="Number"/>
+      <input type="text" id="sectionC_GrossMain" placeholder="S$" name="sectionC_GrossMain" pattern="number"/>
     </div>
     <h3>Family Member #1</h3>
     <div>
@@ -208,7 +208,7 @@
     </div>
     <div>
       <label for="sectionC_Age1">Age</label>
-      <input type="text" id="sectionC_Age1" name="sectionC_Age1" pattern="Number"/>
+      <input type="text" id="sectionC_Age1" name="sectionC_Age1" pattern="number"/>
     </div>
     <div>
       <label for="sectionC_Occupation1">Occupation</label>
@@ -220,11 +220,11 @@
     </div>
     <div>
       <label for="sectionC_Nett1">Monthly Income (Nett)</label>
-      <input type="text" id="sectionC_Nett1" placeholder="S$" name="sectionC_Nett1" pattern="Number"/>
+      <input type="text" id="sectionC_Nett1" placeholder="S$" name="sectionC_Nett1" pattern="number"/>
     </div>
     <div>
       <label for="sectionC_Gross1">Monthly Income (Gross)</label>
-      <input type="text" id="sectionC_Gross1" placeholder="S$" name="sectionC_Gross1" pattern="Number"/>
+      <input type="text" id="sectionC_Gross1" placeholder="S$" name="sectionC_Gross1" pattern="number"/>
     </div>
 
     <h3>Family Member #2</h3>
@@ -242,7 +242,7 @@
     </div>
     <div>
       <label for="sectionC_Age2">Age</label>
-      <input type="text" id="sectionC_Age2" name="sectionC_Age2" pattern="Number"/>
+      <input type="text" id="sectionC_Age2" name="sectionC_Age2" pattern="number"/>
     </div>
     <div>
       <label for="sectionC_Occupation2">Occupation</label>
@@ -254,11 +254,11 @@
     </div>
     <div>
       <label for="sectionC_Nett2">Monthly Income (Nett)</label>
-      <input type="text" id="sectionC_Nett2" placeholder="S$" name="sectionC_Nett2" pattern="Number"/>
+      <input type="text" id="sectionC_Nett2" placeholder="S$" name="sectionC_Nett2" pattern="number"/>
     </div>
     <div>
       <label for="sectionC_Gross2">Monthly Income (Gross)</label>
-      <input type="text" id="sectionC_Gross2" placeholder="S$" name="sectionC_Gross2" pattern="Number"/>
+      <input type="text" id="sectionC_Gross2" placeholder="S$" name="sectionC_Gross2" pattern="number"/>
     </div>
 
 
@@ -280,7 +280,7 @@
     </div>
     <div>
       <label for="sectionC_Age3">Age</label>
-      <input type="text" id="sectionC_Age3" name="sectionC_Age3" pattern="Number"/>
+      <input type="text" id="sectionC_Age3" name="sectionC_Age3" pattern="number"/>
     </div>
     <div>
       <label for="sectionC_Occupation3">Occupation</label>
@@ -292,11 +292,11 @@
     </div>
     <div>
       <label for="sectionC_Nett3">Monthly Income (Nett)</label>
-      <input type="text" id="sectionC_Nett3" placeholder="S$" name="sectionC_Nett3" pattern="Number"/>
+      <input type="text" id="sectionC_Nett3" placeholder="S$" name="sectionC_Nett3" pattern="number"/>
     </div>
     <div>
       <label for="sectionC_Gross3">Monthly Income (Gross)</label>
-      <input type="text" id="sectionC_Gross3" placeholder="S$" name="sectionC_Gross3" pattern="Number"/>
+      <input type="text" id="sectionC_Gross3" placeholder="S$" name="sectionC_Gross3" pattern="number"/>
     </div>
 
 
@@ -317,7 +317,7 @@
     </div>
     <div>
       <label for="sectionC_Age4">Age</label>
-      <input type="text" id="sectionC_Age4" name="sectionC_Age4" pattern="Number"/>
+      <input type="text" id="sectionC_Age4" name="sectionC_Age4" pattern="number"/>
     </div>
     <div>
       <label for="sectionC_Occupation4">Occupation</label>
@@ -329,11 +329,11 @@
     </div>
     <div>
       <label for="sectionC_Nett4">Monthly Income (Nett)</label>
-      <input type="text" id="sectionC_Nett4" placeholder="S$" name="sectionC_Nett4" pattern="Number"/>
+      <input type="text" id="sectionC_Nett4" placeholder="S$" name="sectionC_Nett4" pattern="number"/>
     </div>
     <div>
       <label for="sectionC_Gross4">Monthly Income (Gross)</label>
-      <input type="text" id="sectionC_Gross4" placeholder="S$" name="sectionC_Gross4" pattern="Number"/>
+      <input type="text" id="sectionC_Gross4" placeholder="S$" name="sectionC_Gross4" pattern="number"/>
     </div>
 
     <h3>
@@ -353,7 +353,7 @@
     </div>
     <div>
       <label for="sectionC_Age5">Age</label>
-      <input type="text" id="sectionC_Age5sectionC_Age5" name="sectionC_Age5" pattern="Number"/>
+      <input type="text" id="sectionC_Age5sectionC_Age5" name="sectionC_Age5" pattern="number"/>
     </div>
     <div>
       <label for="sectionC_Occupation5">Occupation</label>
@@ -365,11 +365,11 @@
     </div>
     <div>
       <label for="sectionC_Nett5">Monthly Income (Nett)</label>
-      <input type="text" id="sectionC_Nett5" placeholder="S$" name="sectionC_Nett5" pattern="Number"/>
+      <input type="text" id="sectionC_Nett5" placeholder="S$" name="sectionC_Nett5" pattern="number"/>
     </div>
     <div>
       <label for="sectionC_Gross5">Monthly Income (Gross)</label>
-      <input type="text" id="sectionC_Gross5" placeholder="S$" name="sectionC_Gross5" pattern="Number"/>
+      <input type="text" id="sectionC_Gross5" placeholder="S$" name="sectionC_Gross5" pattern="number"/>
     </div>
   </fieldset>
   <fieldset id="sectionD" class="scoreForm">
@@ -395,25 +395,25 @@
           <td>Source #1</td>
           <td><input type="text" id="sectionD_Frequency1" name="sectionD_Frequency1" /></td>
           <td><input type="text" id="sectionD_Period1" name="sectionD_Period1" /></td>
-          <td><input type="text" placeholder="S$" id="sectionD_Amount1" name="sectionD_Amount1" pattern="Number"/></td>
+          <td><input type="text" placeholder="S$" id="sectionD_Amount1" name="sectionD_Amount1" pattern="number"/></td>
         </tr>
         <tr>
           <td>Source #2</td>
           <td><input type="text" id="sectionD_Frequency2" name="sectionD_Frequency2" /></td>
           <td><input type="text" id="sectionD_Period2" name="sectionD_Period2" /></td>
-          <td><input type="text" placeholder="S$" id="sectionD_Amount2" name="sectionD_Amount2" pattern="Number"/></td>
+          <td><input type="text" placeholder="S$" id="sectionD_Amount2" name="sectionD_Amount2" pattern="number"/></td>
         </tr>
         <tr>
           <td>Source #3</td>
           <td><input type="text" id="sectionD_Frequency3" name="sectionD_Frequency3" /></td>
           <td><input type="text" id="sectionD_Period3" name="sectionD_Period3" /></td>
-          <td><input type="text" placeholder="S$" id="sectionD_Amount3" name="sectionD_Amount3" pattern="Number"/></td>
+          <td><input type="text" placeholder="S$" id="sectionD_Amount3" name="sectionD_Amount3" pattern="number"/></td>
         </tr>
         <tr>
           <td>Source #4</td>
           <td><input type="text" id="sectionD_Frequency4" name="sectionD_Frequency4" /></td>
           <td><input type="text" id="sectionD_Period4" name="sectionD_Period4" /></td>
-          <td><input type="text" placeholder="S$" id="sectionD_Amount4" name="sectionD_Amount4" pattern="Number"/></td>
+          <td><input type="text" placeholder="S$" id="sectionD_Amount4" name="sectionD_Amount4" pattern="number"/></td>
         </tr>
       </table>
     </div>
