--- a/src/pages/mdas/means-testdeclarationform.html
+++ b/src/pages/mdas/means-testdeclarationform.html
@@ -1,4 +1,3 @@
-<h1>Means-Test Declaration Form</h1>
 <form action="" method="" class="formSection" id="DeclaretionFrom" data-abide novalidate>
   <div data-abide-error class="alert callout" style="display: none;">
     <p><i class="fi-alert"></i> There are some errors in your form.</p>
@@ -88,7 +87,7 @@
       <input type="text" id="sectionA_email" name="sectionA_email" pattern="email"/>
     </div>
   </fieldset>
-  <fieldset id="sectionB">
+  <fieldset id="sectionB" style="display:none;">
     <h2>Section B</h2>
     <p>Particulars of ordinary membership holder (If main applicant is not a member)</p>
     <h3>Name (as in NRIC)</h3>
@@ -160,7 +159,7 @@
       <select id="sectionB_relationship" name="sectionB_relationship" class="selRelationship" required></select>
     </div>
   </fieldset>
-  <fieldset id="sectionC">
+  <fieldset id="sectionC" style="display:none;">
     <h2>Section C</h2>
     <p>income declarations (family members living under the same household)</p>
     <p>Please provide recent <u>3 months’ computerised payslips and IRAS declaration</u>. Where applicable, you may need to submit CPF statements / employment letter or any official income documents.</p>
@@ -372,7 +371,7 @@
       <input type="text" id="sectionC_Gross5" placeholder="S$" name="sectionC_Gross5" pattern="number"/>
     </div>
   </fieldset>
-  <fieldset id="sectionD" class="scoreForm">
+  <fieldset id="sectionD" class="scoreForm" style="display:none;">
     <h2>Section D</h2>
     <p>information on source of income</p>
     <div>
@@ -418,7 +417,7 @@
       </table>
     </div>
   </fieldset>
-  <fieldset id="sectionE">
+  <fieldset id="sectionE" style="display:none;">
     <h2>Section E</h2>
     <h3>personal data protection act declaration</h3>
     <p>I fully understand and agree that the personal information which I have provided may be disclosed to other agencies or individuals as per the provisions of the Act.</p>
@@ -457,7 +456,6 @@
       <input type="Date" id="sectionE_MemberDate" name="sectionE_MemberDate" />
     </div>
   </fieldset>
-
 
   <footer class="buttonsGroup">
     <button type="button" id="previous" class="buttonNeutral">Previous</button>
