update ass form

--- a/src/pages/mdas/initial-assesment-form.html
+++ b/src/pages/mdas/initial-assesment-form.html
@@ -29,11 +29,11 @@
         </div>
         <div>
             <label for="sectionA_DisplayName">Display Name<span class="spanCss">*</span></label>
-            <input type="text" id="sectionA_DisplayName" name="sectionA_DisplayName"   />
+            <input type="text" id="sectionA_DisplayName" name="sectionA_DisplayName"  required />
         </div>
         <div>
             <label for="sectionA_nric">NRIC / Birth Cert No.<span class="spanCss">*</span></label>
-            <input type="text" id="sectionA_nric" name="sectionA_nric" pattern="NRIC"  />
+            <input type="text" id="sectionA_nric" name="sectionA_nric" pattern="NRIC" required />
             <span class="form-error">Invalid NRIC</span>
         </div>
 
@@ -108,7 +108,7 @@
         </div>
         <div>
             <label for="sectionA_email">Email</label>
-            <input type="email" id="sectionA_email" name="sectionA_email" pattern="email" />
+            <input type="email" id="sectionA_email" name="sectionA_email" pattern="email" required/>
         </div>
     </fieldset>
     <fieldset id="sectionB">
