middle of adding function to load new page

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,4 +1,4 @@
-
+<div id="pageContentWrapper" data-page-title="Welcome" data-page-layout="">
   <div id="mainWidgets">
   <section id="widget-events" class="widget">
     <h2>Upcoming Events</h2>
@@ -78,3 +78,4 @@
     </div>
   </section>
 </div> <!-- main widgets area -->
+</div>
