--- a/src/pages/reference.html
+++ b/src/pages/reference.html
@@ -1,6 +1,6 @@
-<h1 id="pageTitle">Reference</h1>
+<div data-page-title="Reference" data-page-layout="columns-3" id="pageContentWrapper">
 
-<div data-page-title="Reference" data-page-layout="columns-3"></div>
+  <h1 id="pageTitle">Reference</h1>
   <section id="type">
     <h2>Title and paragraph</h2>
 
@@ -417,3 +417,4 @@
     </div>
 
   </section>
+</div>
