--- a/src/pages/reference.html
+++ b/src/pages/reference.html
@@ -1,4 +1,4 @@
-<div data-page-title="Reference" data-page-layout="columns-3" id="pageContentWrapper">
+<div data-page-title="Reference" data-page-layout="layout-columns-3" id="pageContentWrapper">
 
   <h1 id="pageTitle">Reference</h1>
   <section id="type">
