--- a/src/pages/mdas/initial-assesment-form.html
+++ b/src/pages/mdas/initial-assesment-form.html
@@ -1,4 +1,4 @@
-<form action="" method="" class="formSection" id="InitialAssessmentForm" data-abide novalidate>
+<form action="" method="" class="formSection" data-page-title="MDAS Means-Test Declaration Form" data-page-layout="" id="pageContentWrapper" data-abide novalidate>
     <div data-abide-error class="alert callout" style="display: none;">
         <p><i class="fi-alert"></i> There are some errors in your form.</p>
     </div>
