--- a/src/pages/mdas/means-testdeclarationform.html
+++ b/src/pages/mdas/means-testdeclarationform.html
@@ -1,4 +1,4 @@
-<form action="" method="" class="formSection" id="DeclaretionFrom" data-abide novalidate>
+<form action="" method="" class="formSection"  data-page-title="MDAS Means-Test Declaration Form" data-page-layout="" id="pageContentWrapper" data-abide novalidate>
   <div data-abide-error class="alert callout" style="display: none;">
     <p><i class="fi-alert"></i> There are some errors in your form.</p>
   </div>
@@ -37,7 +37,7 @@
 
     <div>
       <label for="sectionA_nric">NRIC / Birth Cert No.<span class="spanCss">*</span></label>
-      <input type="text" id="sectionA_nric" name="sectionA_nric" pattern="NRIC" required value="S8189959B" />
+      <input type="text" id="sectionA_nric" name="sectionA_nric" pattern="NRIC" required value="" />
       <span class="form-error">Invalid NRIC</span>
     </div>
     <div>
