add a method to load script for each individual page.

--- a/src/pages/reference.html
+++ b/src/pages/reference.html
@@ -1,4 +1,4 @@
-<div data-page-title="Reference" data-page-layout="layout-columns-3" id="pageContentWrapper">
+<div data-page-title="Reference" data-page-layout="layout-columns-3" id="pageContentWrapper" data-page-script="/assets/js/single-page/test.js">
 
   <h1 id="pageTitle">Reference</h1>
   <section id="type">
